--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <title>Bootstrap Custom Layout</title>
     </head>
     <body>
-    <div class="container custom-container">
+    <div class="container custom-container" style="max-width: 1000px">
         <!-- Header -->
-        <header class="d-flex align-items-center py-2 gap-3">
+        <header class="d-flex align-items-center py-2 gap-1">
             <!-- Logo Container -->
-            <div class="logo-container ">
+            <div class="logo-container" style="min-width: 247px;">
                 <a href="#">
-                    <img src="images/logo.svg" style="width: 220px; " class="logo" alt="Enko">
+                    <img src="images/logo.svg" style="width: 230px; " class="logo" alt="Enko">
                 </a>
             </div>
 
             <div class="menu-parent-container d-flex flex-column w-100">
                 <!-- Menu and Contact Container -->
-                <div class="menu-contact-container d-flex align-items-center justify-content-between" style="max-width: 790px">
+                <div class="menu-contact-container d-flex align-items-center justify-content-between">
                     <!-- Menu Items -->
                     <div class="menu-items gap-4 d-flex">
                         <a href="#" class="btn menu-item rounded-5 p-1 text-decoration-none fw-bold fs-6 text-black">Доставка і оплата</a>
